# spoj

./: .gitignore  CMakeLists.txt  Notes.txt
ADDREV/: ADDREV.sln
ADDREV/ADDREV/: ADDREV.vcxproj  Main.cpp
FCTRL/: FCTRL.sln  raw.py
FCTRL/FCTRL/: FCTRL.vcxproj  Source.cpp
Hackerrank/: AVL.cpp  Castle.cpp  DownToZero.cpp  Kindergarden.cpp  LargestRectangle.cpp
NIEKOLEJ/: NIEKOLEJ.sln  NIEKOLEJ.vcxproj  Source.cpp  niekolej.cpp
ONP/: ONP.sln
ONP/ONP/: ONP.vcxproj  Source.cpp
PALIN/: PALIN.sln  PALIN.vcxproj  Source.cpp  palin.cpp
PRIME/: PRIME1.c  prime.cpp
Solutions/: ADDREV.cpp  AL_07_01.cpp  BFN1.cpp  ETI06F1.cpp  EUCGAME.cpp  FANGEN.cpp  FCTRL3.cpp  FLAMASTE.cpp  FR_08_01.cpp  GLUTTON.cpp  JSPACE.cpp  NWD.cpp  PA05_POT.cpp  PP0502B.cpp  PP0504B.cpp  PP0504D.cpp  PP0506A.cpp  PRIME_T.cpp  PRZEDSZK.cpp  PTCLTZ.cpp  PTROL.cpp  RNO_DOD.cpp  ROWNANIE.cpp  SKARBFI.cpp  STOS.cpp  SUMA.cpp  TABLICA.cpp  ekg.cpp  fctrl.cpp  fctrl.py  onp.cpp
TEST/: Source.cpp  TEST.sln
TEST/TEST/: Source.cpp  TEST.vcxproj
ciag_ekg/: data.txt
